# R-D

./: .gitignore  activate.sh
.raspi-onnx/: pyvenv.cfg
consoleApp/: main  main.cpp
models/: tmp.txt
scripts/: RTdetect.py  detect.py  handdetect.py  original.py  test.py  test03.py
scripts/cpp/: CMakeLists.txt  main.cpp  test  test.cpp  zidane.cpp
scripts/python/: ODtest.py  ONNXdetect.py  RTdetect.py  detect.py  forstudy.py  gemini.py  original.py  realtimeHandDetect.py  test.py  test02.py
